@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.idp.saml.rest.action;
 
@@ -18,7 +19,6 @@ import org.elasticsearch.xpack.idp.action.SamlMetadataRequest;
 import org.elasticsearch.xpack.idp.action.SamlMetadataResponse;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
@@ -36,13 +36,14 @@ public class RestSamlMetadataAction extends IdpBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(new Route(GET, "/_idp/saml/metadata/{sp_entity_id}"));
+        return List.of(new Route(GET, "/_idp/saml/metadata/{sp_entity_id}"));
     }
 
     @Override
     protected RestChannelConsumer innerPrepareRequest(RestRequest request, NodeClient client) throws IOException {
         final String spEntityId = request.param("sp_entity_id");
-        final SamlMetadataRequest metadataRequest = new SamlMetadataRequest(spEntityId);
+        final String acs = request.param("acs");
+        final SamlMetadataRequest metadataRequest = new SamlMetadataRequest(spEntityId, acs);
         return channel -> client.execute(SamlMetadataAction.INSTANCE, metadataRequest,
             new RestBuilderListener<SamlMetadataResponse>(channel) {
                 @Override
